# demo-copilot-build-process

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DEMO-SCRIPT.md  LICENSE  README.md  WALKTHROUGH.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.md  copilot-instructions.md
.github/agents/: 1-requirements.agent.md  2-design.agent.md  3-implementation.agent.md  4-test.agent.md  5-deployment.agent.md  6-monitor.agent.md  7-review.agent.md  Explore.agent.md  deployment.agent.md  design.agent.md  implementation.agent.md  requirements.agent.md  test.agent.md
.github/skills/brainstorming/: SKILL.md
.github/skills/eliciting-requirements/: SKILL.md
.github/skills/receiving-code-review/: SKILL.md
.github/skills/requesting-code-review/: SKILL.md
.github/skills/systematic-debugging/: SKILL.md
.github/skills/test-driven-development/: SKILL.md
.github/skills/verification-before-completion/: SKILL.md
.github/skills/writing-plans/: SKILL.md
.github/workflows/: cd-template.yml.template  ci-template-go.yml  ci-template-go.yml.template  ci-template.yml  ci-template.yml.template  expense-portal-ci.yml  expense-portal-deploy.yml  policy-chatbot-ci.yml  policy-chatbot-deploy.yml
docs/: azure-bootstrap.md
docs/adr/: ADR-0001-language-selection.md  ADR-0002-data-storage.md  ADR-0003-email-notifications.md  ADR-0004-expense-portal-language-selection.md  ADR-0004-platform-authentication.md  ADR-0005-expense-portal-blob-storage.md  ADR-0005-expense-portal-data-storage.md  ADR-0006-expense-portal-authentication.md  ADR-0006-expense-portal-ocr-service.md  ADR-0007-expense-portal-ocr-service.md  ADR-0007-policy-chatbot-language-framework.md  ADR-0007-policy-chatbot-language-selection.md  ADR-0007-policy-chatbot-language.md  ADR-0008-expense-portal-async-processing.md  ADR-0008-policy-chatbot-compute-platform.md  ADR-0009-policy-chatbot-data-storage.md  ADR-0010-policy-chatbot-rag-architecture.md  ADR-0011-policy-chatbot-authentication.md  ADR-0011-policy-chatbot-document-ingestion.md  ADR-0012-policy-chatbot-authentication.md  README.md
docs/architecture/: README.md  platform-architecture.md
docs/runbooks/: README.md  platform-incident-response.md
governance/: agent-pipeline-overview.md  enterprise-standards.md
governance/exceptions/: README.md
projects/example-ticket-app/design/: architecture-overview.md  data-model.md  wireframe-spec.md
projects/example-ticket-app/input/: request.md
projects/example-ticket-app/requirements/: requirements.md  user-stories.md
projects/expense-portal/input/: request.md  (+2 more)
projects/expense-portal/src/: Dockerfile  Makefile  alembic.ini  openapi.yaml  pyproject.toml
projects/expense-portal/src/alembic/: env.py
projects/expense-portal/src/alembic/versions/: 001_initial_schema.py
projects/expense-portal/src/app/: config.py  main.py
projects/expense-portal/src/app/api/: admin.py  approvals.py  auth.py  dependencies.py  expenses.py  health.py  receipts.py  reports.py
projects/expense-portal/src/app/core/: approval_workflow.py  duplicate_detector.py  policy_engine.py
projects/expense-portal/src/app/models/: approval.py  database.py  employee.py  expense.py  notification.py  policy.py  schemas.py
projects/expense-portal/src/app/services/: blob_storage.py  email.py  ocr.py  sap.py  workday.py
projects/expense-portal/src/app/tasks/: celery_app.py  integration_tasks.py  notification_tasks.py  ocr_tasks.py  scheduled_tasks.py
projects/policy-chatbot/: review-report.md
projects/policy-chatbot/src/: Dockerfile  Makefile  alembic.ini  entrypoint.sh  openapi.yaml  pyproject.toml
projects/policy-chatbot/src/alembic/: env.py
projects/policy-chatbot/src/alembic/versions/: 001_initial_schema.py
projects/policy-chatbot/src/app/: __init__.py  config.py  main.py
projects/policy-chatbot/src/app/api/: __init__.py  admin.py  analytics.py  chat.py  dependencies.py  feedback.py  health.py
projects/policy-chatbot/src/app/core/: __init__.py  auth.py  document_processor.py  intent_classifier.py  rag.py  rag_pipeline.py
projects/policy-chatbot/src/app/models/: __init__.py  analytics.py  conversation.py  database.py  document.py  escalation.py  feedback.py  schemas.py
projects/policy-chatbot/src/app/services/: __init__.py  blob.py  blob_service.py  conversation_service.py  database.py  document_service.py  feedback_service.py  graph.py  graph_service.py  llm_service.py  openai_client.py  openai_service.py  redis_client.py  redis_service.py  search.py  search_service.py  servicenow.py  servicenow_service.py
projects/policy-chatbot/src/app/tasks/: __init__.py  indexing.py
scripts/: check-prerequisites.sh
templates/deployment/: bicep-module-template.md  bootstrap-conf-template.md  terraform-module-template.md
templates/design/: adr-template.md  wireframe-spec-template.md
templates/monitor/: alert-rules-template.bicep  alert-rules-template.yaml  runbook-template.md  slo-template.md
templates/requirements/: requirements-template.md  user-stories-template.md
templates/test/: test-plan-template.md
(+61 files in other folders)
